# obs_bauchbinde

./: .gitignore  Cargo.toml  README.md  sailfish.toml
src/: api.rs  db.rs  error.rs  frontend.rs  main.rs  middleware.rs  state.rs
src/sql/: add.sql  delete.sql  edit.sql  get.sql  list.sql  migrate.sql
static/: control.css  control.html  control.js  error.html  view.css  view.html
static/css/: view.css
