[package]
name = "bauchbinde"
version = "0.1.0"
edition = "2024"
authors = ["Dav32_1 <64831818+Dav321@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[dependencies]
actix-web = "4.14.0"
actix-files = "0.6.10"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
sailfish = "0.11.2"